--- a/index.html
+++ b/index.html
@@ -20,18 +20,24 @@
     <script>
         function generateDinner() {
             const dinners = [
-                "炸雞",
-                "披薩",
-                "壽司",
-                "義大利麵",
-                "火鍋",
-                "漢堡",
-                "拉麵",
-                "韓式炸雞",
-                "中式炒飯",
-                "墨西哥炸捲",
-                "印度咖哩",
-                "素食沙拉"
+                "陽春麵",
+                "乾麵",
+                "油麵",
+                "意麵",
+                "米粉",
+                "冬粉",
+                "榨菜肉絲麵",
+                "客家粄條",
+                "當歸麵線",
+                "當歸麵",
+                "餛飩麵",
+                "肉燥拉麵",
+                "水餃",
+                "魯肉飯",
+                "肉羹麵",
+                "紅燒牛肉燴飯",
+                "蠔油豬肉燴飯",
+                "咖哩雞肉飯"
             ];
 
             const randomIndex = Math.floor(Math.random() * dinners.length);
