--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
             margin: 100px;
         }
     </style>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5730185541552738"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <h1>晚餐隨機產生器</h1>
